--- a/.github/workflows/eshoponweb-cicd.yml
+++ b/.github/workflows/eshoponweb-cicd.yml
@@ -14,7 +14,7 @@ env:
 jobs:
   #Build, test and publish .net web project in repository
   buildandtest:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       #checkout the repository
       - uses: actions/checkout@v5
@@ -50,7 +50,7 @@ jobs:
 
   # Use Bicep to deploy infrastructure + Publish webapp
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     needs: buildandtest
     environment:
       name: "Development"
