--- a/.github/workflows/eshoponweb-cicd.yml
+++ b/.github/workflows/eshoponweb-cicd.yml
@@ -23,7 +23,8 @@ jobs:
         uses: actions/setup-dotnet@v5
         with:
           dotnet-version: "8.0.x"
-          cache: true
+          dotnet-quality: "preview"
+          dotnet-install-dir: ${{ runner.temp }}\dotnet
       #Build/Test/Publish the .net project
       - name: Build with dotnet
         run: dotnet build ./eShopOnWeb.sln --configuration Release
