--- a/.github/workflows/eshoponweb-cicd.yml
+++ b/.github/workflows/eshoponweb-cicd.yml
@@ -19,12 +19,12 @@ jobs:
       #checkout the repository
       - uses: actions/checkout@v5
       #prepare runner for desired .net version SDK
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v5
-        with:
-          dotnet-version: "8.0.x"
-          dotnet-quality: "preview"
-          dotnet-install-dir: ${{ runner.temp }}\dotnet
+      # - name: Setup .NET
+      #   uses: actions/setup-dotnet@v5
+      #   with:
+      #     dotnet-version: "8.0.x"
+      #     dotnet-quality: "preview"
+      #     dotnet-install-dir: ${{ runner.temp }}\dotnet
       #Build/Test/Publish the .net project
       - name: Build with dotnet
         run: dotnet build ./eShopOnWeb.sln --configuration Release
