--- a/.github/workflows/eshoponweb-cicd.yml
+++ b/.github/workflows/eshoponweb-cicd.yml
@@ -34,7 +34,7 @@ jobs:
         run: |
           dotnet publish ./src/Web/Web.csproj -c Release -o publish
           cd publish
-          zip -r ../app.zip .
+          zip -r app.zip .
       # upload the published website code artifacts
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v5
