--- a/.github/workflows/eshoponweb-cicd.yml
+++ b/.github/workflows/eshoponweb-cicd.yml
@@ -14,17 +14,16 @@ env:
 jobs:
   #Build, test and publish .net web project in repository
   buildandtest:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       #checkout the repository
       - uses: actions/checkout@v5
       #prepare runner for desired .net version SDK
-      # - name: Setup .NET
-      #   uses: actions/setup-dotnet@v5
-      #   with:
-      #     dotnet-version: "8.0.x"
-      #     dotnet-quality: "preview"
-      #     dotnet-install-dir: ${{ runner.temp }}\dotnet
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v5
+        with:
+          dotnet-version: "8.0.x"
+          dotnet-quality: "preview"
       #Build/Test/Publish the .net project
       - name: Build with dotnet
         run: dotnet build ./eShopOnWeb.sln --configuration Release
@@ -32,15 +31,15 @@ jobs:
         run: dotnet test ./eShopOnWeb.sln --configuration Release
       - name: dotnet publish
         run: |
-          dotnet publish ./src/Web/Web.csproj -c Release -o publish
-          cd publish
-          zip -r app.zip .
+          dotnet publish ./src/Web/Web.csproj -c Release -o ${{env.DOTNET_ROOT}}/myapp
+          cd ${{env.DOTNET_ROOT}}/myapp
+          zip -r ../app.zip .
       # upload the published website code artifacts
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v5
         with:
           name: .net-app
-          path: publish/app.zip
+          path: ${{env.DOTNET_ROOT}}/app.zip
 
       # upload the bicep template as artifacts for next job
       - name: Upload artifact for deployment job
@@ -51,7 +50,7 @@ jobs:
 
   # Use Bicep to deploy infrastructure + Publish webapp
   deploy:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     needs: buildandtest
     environment:
       name: "Development"
